# pixelpose

./: README.md  TODO  debug_fbx.py  pyproject.toml
frame-viewer/: __init__.py  __main__.py  animation_controller.py  app.py
mixamo-downloader/: cli.py
mixamo-downloader/client/: client.py
pose_model/: train.py  utils.py
pose_model/architecture/: denoise.py  frozen.py  pose_encoder.py  preprocess.py
pose_model/tests/architecture/: test_preprocess.py  test_utils.py
renderer/: cli.py  model.py  pose.py  utils.py  worker.py
renderer/scripts/: render.py
src/pixelpose/app/: __init__.py  dataset.py
src/pixelpose/mixamo/: __init__.py  client.py  export_job.py  utils.py
temp/: train.py
temp/dataset/: dataset.py
temp/frame-viewer/: README.md  app.py  frame_player.py
temp/pose_model/: configuration.py  sweep.yaml  trainer.py  utils.py
temp/pose_model/architecture/: denoise.py  utils.py
temp/pose_model/tests/architecture/: test_denoise.py
temp/renderer/: cli.py  model.py  utils.py  worker.py
temp/renderer/scripts/: count_frames.py  render.py
train/: dataset.ipynb  train.ipynb
