[project]
name = "pixelpose"
version = "0.1.0"
description = "A dataset of pixelated characters with poses"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.12.0.88",
    "Pillow>=10.0.0",
    "tqdm>=4.67.1",
    "requests>=2.31.0",
    "yaspin>=3.2.0",
    "ipykernel>=6.30.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
]
